# auto-git-push

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
auto_git_push/: __init__.py  config.py  exceptions.py  watcher.py
example/: basic_usage.py  custom_usage.py
test/unit/auto_git_push/: __init__.py
test/unit/auto_git_push/config/: test_auto_git_push_config.py
test/unit/auto_git_push/watcher/: __init__.py  test_auto_git_pusher.py
